# testtaskfork

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  task.md
docs/: api_reference.md
src/: main.py
src/app/: bootstrap.py
src/app/api/v1/: __init__.py  graphql.py
src/app/api/v1/contracts/: auth_graphql.py
src/app/core/dependencies/: db.py
src/app/core/dependencies/repositories/: password_reset.py  user.py
src/app/core/dependencies/security/: auth_manager.py  crypt_context.py  user.py
src/app/core/dependencies/services/: auth.py
src/app/core/exceptions/: auth_exc.py
src/app/core/security/: auth_manager.py
src/app/domain/models/db/: base.py  password_reset_token.py  user.py
src/app/domain/repositories/: password_reset_repository.py  user_repository.py
src/app/domain/services/: auth_query_service.py  auth_service.py
src/cfg/: cfg.py
tests/: test_auth_command_service.py  test_auth_graphql_integration.py  test_user_repository_integration.py
